# svmix

./: .gitignore  .gitmodules  Makefile  OPENMP.md  README.md
examples/: accuracy_validation.ipynb  basic_C_usage.c
include/: svmix.h
perf/bench/: README.md  bench_comprehensive.py  bench_ensemble_scaling.py  bench_particle_scaling.py  bench_threads.py  plot_performance.py
perf/common/: README.md  __init__.py  generate_synthetic.py  metrics.py  synthetic.py  utils.py
perf/real/: README.md  basic_validation.py  config_comparison.py  garch_comparison.py  long_term_test.py  utils.py
perf/synthetic/: README.md  __init__.py  ensemble_accuracy_scaling.py  grid_width_tradeoff.py  grid_width_vs_k_frontier.py  particle_accuracy_scaling.py
python/: pyproject.toml  pytest.ini  setup.py
python/svmix/: __init__.py  _native.py  config.py  core.py  params.py  types.py
python/tests/: conftest.py
python/tests/integration/: test_checkpoint.py  test_edge_cases.py  test_filter.py  test_hard_assertions.py  test_memory.py
python/tests/unit/: test_config.py  test_params.py  test_types.py
src/: checkpoint.c  checkpoint.h  ensemble.c  ensemble.h  ensemble_internal.h  model_sv.c  model_sv.h  model_sv_internal.h  svmix.c  svmix_internal.h  util.c  util.h
tests/: test_common.h
tests/integration/: test_sv_fastpf_determinism.c  test_sv_fastpf_smoke.c
tests/unit/: test_checkpoint.c  test_ensemble.c  test_ensemble_openmp.c  test_model_sv.c  test_student_t.c  test_svmix_api.c
