[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "svmix"
version = "1.0.0"
description = "Stochastic Volatility Model Mixture for Bayesian Filtering"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "Tiaan Viviers"}
]
keywords = ["volatility", "filtering", "bayesian", "particle-filter", "stochastic-volatility"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Financial and Insurance Industry",
    "License :: OSI Approved :: MIT License",
    "Operating System :: POSIX :: Linux",
    "Operating System :: MacOS",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: C",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Mathematics",
]

dependencies = [
    "numpy>=1.20.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov",
]

[project.urls]
Homepage = "https://github.com/TiaanViviers/svmix"
Repository = "https://github.com/TiaanViviers/svmix"
Issues = "https://github.com/TiaanViviers/svmix/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["svmix*"]

[tool.setuptools.package-data]
svmix = ["lib/*.so", "lib/*.dylib", "lib/*.dll"]
